# labs_on_paralellization

./: README.md
lab10_mpi-yaroshko_petrychko_kononenko_/: CMakeLists.txt  main.cpp  readme.md
lab10_mpi-yaroshko_petrychko_kononenko_/config_parser/: config_parser.cpp  config_parser.h
lab10_mpi-yaroshko_petrychko_kononenko_/configs/: config1.cfg  initial.csv
lab10_mpi-yaroshko_petrychko_kononenko_/matrix_wrapper/: matrix_wrapper.cpp  matrix_wrapper.h
lab10_mpi-yaroshko_petrychko_kononenko_/scripts/: create_animation.py  script.py
lab3_integral_parallel-yaroshko_petrychko_kononenko/: .gitignore  CMakeLists.txt  main.cpp  readme.md
lab3_integral_parallel-yaroshko_petrychko_kononenko/additional/: atomic.cpp  mutex.cpp
lab3_integral_parallel-yaroshko_petrychko_kononenko/config_parser/: config_parser.cpp
lab3_integral_parallel-yaroshko_petrychko_kononenko/data/: func1.cfg
lab3_integral_parallel-yaroshko_petrychko_kononenko/functions/: functions.h
lab3_integral_parallel-yaroshko_petrychko_kononenko/options_parser/: options_parser.h
lab3_integral_parallel-yaroshko_petrychko_kononenko/scripts/: script.py
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/: CMakeLists.txt  main.cpp  readme.md
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/config_parser/: config_parser.h
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/data/: func2.cfg  func3.cfg
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/data/results/: with_queue.json  (+1 more)
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/functions/: functions.cpp
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/options_parser/: options_parser.cpp
lab4_integral_tasks_queue-yaroshko_petrychko_kononenko/scripts/: plot_graphs.py  script.py
lab5_integral_threadpool-yaroshko_petrychko_kononenko/: CMakeLists.txt  main.cpp  readme.md
lab5_integral_threadpool-yaroshko_petrychko_kononenko/options_parser/: options_parser.h
lab5_integral_threadpool-yaroshko_petrychko_kononenko/scripts/: plot_graphs.py  run_script.sh  script.py
lab5_integral_threadpool-yaroshko_petrychko_kononenko/thread_pool/: join_threads.h  thread_pool.cpp  thread_pool.h
lab5_integral_threadpool-yaroshko_petrychko_kononenko/threadsafe_queue/: threadsafe_queue.h
lab7_word_count_parallel-kononenko_yaroshko_petrychko/: .gitignore  CMakeLists.txt  main.cpp  readme.md
lab7_word_count_parallel-kononenko_yaroshko_petrychko/config_parser/: config_parser.cpp
lab7_word_count_parallel-kononenko_yaroshko_petrychko/configs/: config1.cfg
lab7_word_count_parallel-kononenko_yaroshko_petrychko/disk_reader/: DiskReader.cpp  DiskReader.h
lab7_word_count_parallel-kononenko_yaroshko_petrychko/options_parser/: options_parser.h
lab7_word_count_parallel-kononenko_yaroshko_petrychko/scripts/: runner.py  script.py
lab7_word_count_parallel-kononenko_yaroshko_petrychko/threadsafe_queue/: threadsafe_queue.h
lab8_word_count_external_tools-kononenko_yaroshko_petrychko/: .gitignore  CMakeLists.txt  main.cpp  readme.md  requirements.txt
lab8_word_count_external_tools-kononenko_yaroshko_petrychko/config_parser/: config_parser.cpp
lab8_word_count_external_tools-kononenko_yaroshko_petrychko/configs/: config1.cfg
lab8_word_count_external_tools-kononenko_yaroshko_petrychko/disk_reader/: DiskReader.cpp  DiskReader.h
lab8_word_count_external_tools-kononenko_yaroshko_petrychko/scripts/: script.py
lab9_word_count_high_abstraction-kononenko_yaroshko_petrychko/: CMakeLists.txt  main.cpp  readme.md
lab9_word_count_high_abstraction-kononenko_yaroshko_petrychko/config_parser/: config_parser.h
lab9_word_count_high_abstraction-kononenko_yaroshko_petrychko/configs/: config1.cfg
lab9_word_count_high_abstraction-kononenko_yaroshko_petrychko/disk_reader/: DiskReader.cpp  DiskReader.h
lab9_word_count_high_abstraction-kononenko_yaroshko_petrychko/options_parser/: options_parser.cpp
lab9_word_count_high_abstraction-kononenko_yaroshko_petrychko/scripts/: runner.py  script.py
(+1 files in other folders)
